--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   },
   "homepage": "https://github.com/phoenixlzx/telegram-stickerimage-bot#readme",
   "dependencies": {
-    "async": "^2.0.1",
-    "fs-extra": "^0.30.0",
+    "async": "^3.2.3",
+    "fs-extra": "^10.1.0",
     "imagemagick": "^0.1.3",
-    "jszip": "^3.1.1",
-    "mkdirp": "^0.5.1",
+    "jszip": "^3.9.1",
+    "mkdirp": "^1.0.4",
     "request": "^2.88.0",
-    "telegraf": "^3.24.0",
+    "telegraf": "^4.7.0",
     "telegraf-command-parts": "^1.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.29",
+    "typescript": "^4.6.3"
   }
 }
